# bos

./: .gitignore  Cargo.toml  README.md  notes.md
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  task.rs  vga_buf.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  simple_executor.rs
tests/: basic_root.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
