[package]
name = "bos"
version = "0.1.0"
authors = ["SHIMIZU Takuma <anti.soft.b@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.11", features = ["map_physical_memory"] }
conquer-once = { version = "0.3.2", default-features = false }
crossbeam-queue = { version = "0.3.1", features = ["alloc"], default-features = false }
futures-util = { version = "0.3.13", features = ["alloc"], default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.8.11"
pc-keyboard = "0.5.1"
pic8259_simple = "0.2.0"
spin = "0.7.0"
uart_16550 = "0.2.10"
volatile = "0.2.6"
x86_64 = "0.13.2"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 60

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
